[project]
name = "KiramiBot"
version = "0.3.4"
description = "ðŸŒŸ è¯»ä½œ Kiramiï¼Œå†™ä½œæ˜Ÿè§ï¼Œç®€æ˜Žè½»å¿«çš„èŠå¤©æœºå™¨äººåº”ç”¨ã€‚"
authors = [{ name = "Akirami", email = "akiramiaya@outlook.com" }]
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0" }
readme = "README.md"
keywords = ["kirami", "bot", "chatbot", "onebot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "nonebot2[fastapi]==2.1.3",
    "nonebot-adapter-onebot==2.3.1",
    "typing-extensions>=4.8.0",
    "APScheduler>=3.10.4",
    "mango-odm>=0.3.2",
    "arrow>=1.3.0",
    "bidict>=0.22.1",
    "cashews>=6.3.0",
    "flowery>=0.0.1",
    "rich>=13.6.0",
    "loguru>=0.7.2",
    "tomli>=2.0.1; python_version < \"3.11\"",
    "pyyaml>=6.0.1",
    "playwright>=1.38.0",
    "httpx[http2]>=0.25.0",
    "Jinja2>=3.1.2",
    "tenacity>=8.2.3",
    "filetype>=1.2.0",
    "markdown-it-py[linkify,plugins]>=3.0.0",
    "mdit-py-emoji>=0.1.1",
    "pygments>=2.16.1",
    "yarl>=1.9.2",
]

[project.urls]
homepage = "https://kiramibot.dev"
repository = "https://github.com/A-kirami/KiramiBot"
documentation = "https://kiramibot.dev/docs"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
    "pre-commit>=3.8.0",
]

[tool.pdm.scripts]
lint = "ruff check"
"lint:fix" = "ruff check --fix"
format = "ruff format"
post_install = "pre-commit install"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
