[project]
name = "KiramiBot"
version = "0.3.5"
description = "ðŸŒŸ è¯»ä½œ Kiramiï¼Œå†™ä½œæ˜Ÿè§ï¼Œç®€æ˜Žè½»å¿«çš„èŠå¤©æœºå™¨äººåº”ç”¨ã€‚"
authors = [{ name = "Akirami", email = "akiramiaya@outlook.com" }]
requires-python = ">=3.12,<4.0"
license = { text = "AGPL-3.0" }
readme = "README.md"
keywords = ["kirami", "bot", "chatbot", "onebot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "nonebot2[fastapi]==2.1.3",
    "nonebot-adapter-onebot==2.3.1",
    "APScheduler>=3.10.4",
    "mango-odm>=0.3.2",
    "arrow>=1.3.0",
    "bidict>=0.23.1",
    "cashews>=7.3.2",
    "flowery>=0.0.1",
    "rich>=13.9.3",
    "loguru>=0.7.2",
    "pyyaml>=6.0.2",
    "playwright>=1.48.0",
    "httpx[http2]>=0.27.2",
    "Jinja2>=3.1.4",
    "tenacity>=9.0.0",
    "filetype>=1.2.0",
    "markdown-it-py[linkify,plugins]>=3.0.0",
    "mdit-py-emoji>=0.1.1",
    "pygments>=2.18.0",
    "yarl>=1.16.0",
]

[project.urls]
homepage = "https://kirami.bot"
repository = "https://github.com/A-kirami/KiramiBot"
documentation = "https://kirami.bot/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kirami"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "pre-commit>=4.0.1",
    "poethepoet>=0.29.0",
]

[tool.poe.tasks]
lint = "ruff check"
"lint:fix" = "ruff check --fix"
format = "ruff format"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
